--- a/admin/css/non-veg-diet.css
+++ b/admin/css/non-veg-diet.css
@@ -1,8 +1,9 @@
 .nav{
     height:80px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 0px 0px 5px;
     border-radius:5px;
     margin:10px;
+    font-style: italic;
 }
 .nav h1{
     float:right;
@@ -21,7 +22,7 @@
     width:34%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px
 }
 .right{
@@ -29,7 +30,7 @@
     width:63%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px;
 }
 .eggs{
@@ -41,13 +42,14 @@
    margin:10px;
    font-size: 20px;
    justify-items: auto;
+   font-family: monospace;
 }
 .left-2{
     float: left;
     width:63%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px
 }
 .right-2{
@@ -55,7 +57,7 @@
     width:34%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px;
 }
 .lamb_meet{
@@ -67,13 +69,14 @@
     margin:10px;
     font-size: 20px;
     justify-items: auto;
+    font-family: monospace;
 }
 .left-3{
     float: left;
     width:34%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px
 }
 .right-3{
@@ -81,7 +84,7 @@
     width:63%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px;
 }
 .salmon-fish{
@@ -93,13 +96,14 @@
     margin:10px;
     font-size: 20px;
     justify-content: auto;
+    font-family: monospace;
 }
 .left-4{
     float: left;
     width:63%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px
 }
 .right-4{
@@ -107,7 +111,7 @@
     width:34%;
     height:200px;
     border-radius: 4px;
-    box-shadow: 3px 5px 10px;
+    box-shadow: 2px 2px 4px;
     margin:10px;
 }
 .oats{
@@ -119,4 +123,5 @@
     margin:10px;
     font-size: 20px;
     justify-content: auto;
+    font-family: monospace;
 }
